--- a/mailing/templates/mailing/base.html
+++ b/mailing/templates/mailing/base.html
@@ -11,6 +11,6 @@
 {% include "mailing/includes/header.html" %}
   {% block content %} {% endblock %}
 
-<script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/static/js/bootstrap.bundle.js"></script>
 </body>
 </html>
