Finished CRUD for Message model

--- a/mailing/templates/mailing/home.html
+++ b/mailing/templates/mailing/home.html
@@ -6,6 +6,6 @@
 
 {% block content %}
     <p>Количество рассылок: {{ all_mailings }}</p>
-    <p>Запущено рассылок: {{ launched_mailings }}</p>
+    <p>Активных рассылок: {{ launched_mailings }}</p>
     <p>Количество уникальных получателей: {{ unique_receivers }}</p>
 {% endblock %}
