--- a/mailing/templates/mailing/includes/header.html
+++ b/mailing/templates/mailing/includes/header.html
@@ -15,7 +15,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="{% url 'mailing:mail-receivers-list' %}">Получатели</a></li>
-            <li><a class="dropdown-item" href="#">Рассылки</a></li>
+            <li><a class="dropdown-item" href="{% url 'mailing:mailing-units-list' %}">Рассылки</a></li>
             <li><a class="dropdown-item" href="{% url 'mailing:messages-list' %}">Сообщения</a></li>
           </ul>
         </li>
@@ -25,7 +25,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="{% url 'mailing:mail-receiver-create' %}">Получатель</a></li>
-            <li><a class="dropdown-item" href="#">Рассылка</a></li>
+            <li><a class="dropdown-item" href="{% url 'mailing:mailing-unit-create' %}">Рассылка</a></li>
             <li><a class="dropdown-item" href="{% url 'mailing:message-create' %}">Сообщение</a></li>
           </ul>
         </li>
