--- a/mailing/templates/mailing/mailing_unit/mailing_unit_delete.html
+++ b/mailing/templates/mailing/mailing_unit/mailing_unit_delete.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "mailing/base.html" %}
 
-</body>
-</html>
+{% block title %}Удалить Рассылку{% endblock %}
+
+{% block content %}
+<body>
+    <div class="container mt-5">
+        <h1 class="mb-4">Удалить Рассылку</h1>
+        <p>Вы уверены, что хотите удалить эту рассылку?</p>
+        <form method="post">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-danger">Удалить</button>
+            <a href="{% url 'mailing:home' %}" class="btn btn-secondary">Отмена</a>
+        </form>
+    </div>
+{% endblock %}
