--- a/mailing/templates/mailing/mailing_unit/mailing_unit_detail.html
+++ b/mailing/templates/mailing/mailing_unit/mailing_unit_detail.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "mailing/base.html" %}
 
-</body>
-</html>
+{% block title %}Рассылка: {{ mailing_unit.message }}{% endblock %}
+
+{% block content %}
+
+    <p>Запущена в: {{ mailing_unit.started_at }}</p>
+
+    <p>Тема: <a href="{% url 'mailing:message-detail' mailing_unit.message.pk %}">{{ mailing_unit.message }}</a></p>
+    <p>Получатели: {{ mailing_unit.receivers }}</p>
+    <p>Статус: {{ mailing_unit.status }}</p>
+
+
+<a href="{% url 'mailing:mailing-unit-update' mailing_unit.pk %}">
+    <button type="button" class="btn btn-lg btn-block btn-outline-secondary">Редактировать</button>
+</a>
+<a href="{% url 'mailing:mailing-unit-delete' mailing_unit.pk %}">
+    <button type="button" class="btn btn-lg btn-block btn-outline-danger">Удалить</button>
+</a>
+
+{% endblock %}
