--- a/mailing/templates/mailing/mailing_unit/mailing_unit_update.html
+++ b/mailing/templates/mailing/mailing_unit/mailing_unit_update.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "mailing/base.html" %}
 
-</body>
-</html>
+{% block title %}Обновить Рассылку{% endblock %}
+
+{% block content %}
+
+<div class="card mb-4 box-shadow">
+                <div class="card-header">
+                    <h4 class="my-0 font-weight-normal">Обновление Рассылку</h4>
+                </div>
+                <div class="card-body">
+                    <form method="post" action="" class="form-floating" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Обновить Рассылку</button>
+                        <a href="{% url 'mailing:home' %}" class="btn btn-secondary">Отмена</a>
+                    </form>
+                </div>
+            </div>
+
+{% endblock %}
