Added functionality for sending emails through UI

--- a/mailing/templates/mailing/mailing_unit/mailing_units_list.html
+++ b/mailing/templates/mailing/mailing_unit/mailing_units_list.html
@@ -6,19 +6,13 @@
 
 {% for mailing_unit in mailing_units %}
 
-    <p>Номер: {{ mailing_unit.pk }}</p>
-    <p>Тема: <a href="{% url 'mailing:mailing-unit-detail' mailing_unit.pk %}">{{ mailing_unit.message }}</a></p>
+    <p>Тема: {{ mailing_unit.message }}</p>
     <p>Статус: {{ mailing_unit.status }}</p>
 
-    {% if mailing_unit.status != 'Launched' %}
-    <a href="{% url 'mailing:mailing-units-list' %}">
-        <button type="button" class="btn btn-lg btn-block btn-outline-primary">Начать Рассылку</button>
+    <a href="{% url 'mailing:mailing-unit-detail' mailing_unit.pk %}">
+        <button type="button" class="btn btn-lg btn-block btn-outline-primary">Посмотреть</button>
     </a>
-    {% else %}
-    <a href="{% url 'mailing:mailing-units-list' %}">
-        <button type="button" class="btn btn-lg btn-block btn-outline-primary">Завершить Рассылку</button>
-    </a>
-    {% endif %}
+
 {% endfor %}
 
 {% endblock %}
