--- a/mailing/templates/mailing/mailing_unit/mailing_unit_delete.html
+++ b/mailing/templates/mailing/mailing_unit/mailing_unit_delete.html
@@ -10,7 +10,7 @@
         <form method="post">
             {% csrf_token %}
             <button type="submit" class="btn btn-danger">Удалить</button>
-            <a href="{% url 'mailing:home' %}" class="btn btn-secondary">Отмена</a>
+            <a href="{% url 'mailing:mailing-units-list' %}" class="btn btn-secondary">Отмена</a>
         </form>
     </div>
 {% endblock %}
