--- a/mailing/templates/mailing/mailing_unit/mailing_unit_detail.html
+++ b/mailing/templates/mailing/mailing_unit/mailing_unit_detail.html
@@ -13,8 +13,29 @@
     {% endif %}
 
     <p>Тема: <a href="{% url 'mailing:message-detail' mailing_unit.message.pk %}">{{ mailing_unit.message }}</a></p>
-    <p>Получатели: {{ mailing_unit.receivers }}</p>
+    <p>Получатели: </p>
+    <ul>
+        {% for receiver in mailing_unit.receivers.all %}
+            <li><a href="{% url 'mailing:mail-receiver-detail' receiver.pk %}">{{ receiver }}</a></li>
+        {% endfor %}
+    </ul>
     <p>Статус: {{ mailing_unit.status }}</p>
+
+    {% if mailing_unit.status != 'Launched' %}
+        <form action="{% url 'mailing:mailing-unit-send-mail' mailing_unit.pk %}" method="post">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Начать Рассылку</button>
+        </form>
+        {% else %}
+        <form action="{% url 'mailing:mailing-unit-send-mail' mailing_unit.pk %}" method="post">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Отправить Рассылку еще раз</button>
+        </form>
+        <form action="{% url 'mailing:mailing-unit-stop-mail' mailing_unit.pk %}" method="post">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Завершить Рассылку</button>
+        </form>
+    {% endif %}
 
 
 <a href="{% url 'mailing:mailing-unit-update' mailing_unit.pk %}">
