--- a/mailing/templates/mailing/message/message_form.html
+++ b/mailing/templates/mailing/message/message_form.html
@@ -1,18 +1,22 @@
 {% extends "mailing/base.html" %}
 
-{% block title %}Добавить Получателя{% endblock %}
+{% block title %}Сообщение{% endblock %}
 
 {% block content %}
 
 <div class="card mb-4 box-shadow">
                 <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Добавление получателя</h4>
+                    {% if message %}
+                    <h4 class="my-0 font-weight-normal">Редактирование Сообщения</h4>
+                    {% else %}
+                    <h4 class="my-0 font-weight-normal">Добавление Сообщения</h4>
+                    {% endif %}
                 </div>
                 <div class="card-body">
                     <form method="post" action="" class="form-floating" enctype="multipart/form-data">
                         {% csrf_token %}
                         {{ form.as_p }}
-                        <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Добавить получателя</button>
+                        <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Сохранить Сообщение</button>
                         <a href="{% url 'mailing:home' %}" class="btn btn-secondary">Отмена</a>
                     </form>
                 </div>
