fixed style in mailing_unit_detail

--- a/mailing/templates/mailing/mailing_unit/mailing_unit_detail.html
+++ b/mailing/templates/mailing/mailing_unit/mailing_unit_detail.html
@@ -33,31 +33,24 @@
         <div class="row">
             <div class="col-6">
                 <div class="btn-group" role="group" aria-label="Basic example">
-                    {% if mailing_unit.status != 'Launched' %}
-
                     <form action="{% url 'mailing:mailing-unit-send-mail' mailing_unit.pk %}" method="post">
                         {% csrf_token %}
-
-                        <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Завершить Рассылку
-                        </button>
-
-                    </form>
-                    {% else %}
-                    <form action="{% url 'mailing:mailing-unit-send-mail' mailing_unit.pk %}" method="post">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Отправить Рассылку еще
-                            раз
+                        <button type="submit" class="btn btn-lg btn-block btn-outline-primary">
+                            {% if mailing_unit.status != 'Launched' %}
+                                Начать Рассылку
+                            {% else %}
+                                Отправить Рассылку еще раз
+                            {% endif %}
                         </button>
                     </form>
-
-
+                    {% if mailing_unit.status == 'Launched' %}
                     <form action="{% url 'mailing:mailing-unit-stop-mail' mailing_unit.pk %}" method="post">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-lg btn-block btn-danger">Завершить Рассылку</button>
                     </form>
+                    {% endif %}
                 </div>
             </div>
-            {% endif %}
             <div class="col-6">
                 <a href="{% url 'mailing:mailing-unit-update' mailing_unit.pk %}">
                     <button type="button" class="btn btn-md btn-block btn-outline-secondary">Редактировать</button>
