--- a/mailing/templates/mailing/home.html
+++ b/mailing/templates/mailing/home.html
@@ -5,7 +5,16 @@
 {% block title %} Главная {% endblock %}
 
 {% block content %}
-    <p>Количество рассылок: {{ all_mailings }}</p>
-    <p>Активных рассылок: {{ launched_mailings }}</p>
-    <p>Количество уникальных получателей: {{ unique_receivers }}</p>
+
+<div class="container text-center">
+    <ul class="list-group">
+           <li class="list-group-item"><h3>Количество рассылок:</h3> <h4 class="text-info bg-dark">{{ all_mailings }}</h4></li>
+
+            <li class="list-group-item"><h3>Активных рассылок:</h3> <h4 class="text-info bg-dark">{{ launched_mailings }}</h4></li>
+
+            <li class="list-group-item"><h3>Количество уникальных получателей:</h3> <h4 class="text-info bg-dark">{{ unique_receivers }}</h4></li>
+
+    </ul>
+</div>
+
 {% endblock %}
