--- a/mailing/templates/mailing/message/message_detail.html
+++ b/mailing/templates/mailing/message/message_detail.html
@@ -4,14 +4,21 @@
 
 {% block content %}
 
-    <p>Тема: {{ message.title }}</p>
-    <p>Текст: {{ message.body }}</p>
-
-<a href="{% url 'mailing:message-update' message.pk %}">
-    <button type="button" class="btn btn-lg btn-block btn-outline-secondary">Редактировать</button>
-</a>
-<a href="{% url 'mailing:message-delete' message.pk %}">
-    <button type="button" class="btn btn-lg btn-block btn-outline-danger">Удалить</button>
-</a>
+<div class="card text-center">
+    <div class="card-header">
+        <h5>Тема: {{ message.title }}</h5>
+    </div>
+    <div class="card-body">
+        <h5 class="card-title">Текст: </h5> <p class="text-secondary">{{ message.body }}</p>
+        <div class="card-footer">
+            <a href="{% url 'mailing:message-update' message.pk %}">
+                <button type="button" class="btn btn-lg btn-block btn-outline-secondary">Редактировать</button>
+            </a>
+            <a href="{% url 'mailing:message-delete' message.pk %}">
+                <button type="button" class="btn btn-lg btn-block btn-outline-danger">Удалить</button>
+            </a>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
