updated templates and views according to access rights

--- a/mailing/templates/mailing/mailing_unit/mailing_unit_detail.html
+++ b/mailing/templates/mailing/mailing_unit/mailing_unit_detail.html
@@ -43,7 +43,7 @@
                             {% endif %}
                         </button>
                     </form>
-                    {% if mailing_unit.status == 'Launched' %}
+                    {% if mailing_unit.status == 'Launched' and mailing_unit.owner == user or perms.mailing_unit.can_disable_mailing %}
                     <form action="{% url 'mailing:mailing-unit-stop-mail' mailing_unit.pk %}" method="post">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-lg btn-block btn-danger">Завершить Рассылку</button>
@@ -52,12 +52,14 @@
                 </div>
             </div>
             <div class="col-6">
+                {% if mailing_unit.owner == user %}
                 <a href="{% url 'mailing:mailing-unit-update' mailing_unit.pk %}">
                     <button type="button" class="btn btn-md btn-block btn-outline-secondary">Редактировать</button>
                 </a>
                 <a href="{% url 'mailing:mailing-unit-delete' mailing_unit.pk %}">
                     <button type="button" class="btn btn-md btn-block btn-outline-danger">Удалить</button>
                 </a>
+                {% endif %}
             </div>
         </div>
     </div>
