--- a/mailing/templates/mailing/mail_receiver/mail_receiver_detail.html
+++ b/mailing/templates/mailing/mail_receiver/mail_receiver_detail.html
@@ -12,12 +12,14 @@
         <h5 class="card-title">Email: {{ mail_receiver.email }}</h5>
         <div class="card-footer">
             <p class="text-secondary">Комментарий: {{ mail_receiver.comment }}</p>
+            {% if mailing_unit.owner == user %}
             <a href="{% url 'mailing:mail-receiver-update' mail_receiver.pk %}">
                 <button type="button" class="btn btn-lg btn-block btn-outline-secondary">Редактировать</button>
             </a>
             <a href="{% url 'mailing:mail-receiver-delete' mail_receiver.pk %}">
                 <button type="button" class="btn btn-lg btn-block btn-outline-danger">Удалить</button>
             </a>
+            {% endif %}
         </div>
     </div>
 </div>
