--- a/mailing/templates/mailing/mail_receiver/mail_receivers_list.html
+++ b/mailing/templates/mailing/mail_receiver/mail_receivers_list.html
@@ -6,6 +6,7 @@
 
 <div class="row row-cols-1 row-cols-md-2 g-4">
     {% for mail_receiver in mail_receivers %}
+    {% if mail_receiver.owner == user or perms.mailing_unit.view_mailreceiver%}
     <div class="col">
     <div class="card">
     <div class="card-body">
@@ -16,6 +17,7 @@
     </div>
       </div>
         </div>
+    {% endif %}
       {% endfor %}
   </div>
 
