--- a/mailing/templates/mailing/mailing_unit/mailing_units_list.html
+++ b/mailing/templates/mailing/mailing_unit/mailing_units_list.html
@@ -5,6 +5,7 @@
 {% block content %}
 <ul class="list-group list-group-flush">
 {% for mailing_unit in mailing_units %}
+    {% if mailing_unit.owner == user or perms.mailing_unit.view_mailingunit%}
     <li class="list-group-item">
     <h4>Тема: <span class="badge text-bg-secondary">{{ mailing_unit.message }}</span></h4>
         {% if mailing_unit.status == 'Launched' %}
@@ -18,6 +19,7 @@
         <button type="button" class="btn btn-lg btn-block btn-outline-info">Посмотреть</button>
     </a>
     </li>
+    {% endif %}
 {% endfor %}
 </ul>
 {% endblock %}
