--- a/mailing/templates/mailing/message/messages_list.html
+++ b/mailing/templates/mailing/message/messages_list.html
@@ -6,6 +6,7 @@
 
 <div class="row row-cols-1 row-cols-md-2 g-4">
     {% for message in messages %}
+    {% if message.owner == user %}
     <div class="col">
     <div class="card">
     <div class="card-body">
@@ -15,6 +16,7 @@
     </div>
       </div>
         </div>
+    {% endif %}
       {% endfor %}
   </div>
 
