--- a/mailing/templates/mailing/mailing_attempts_list.html
+++ b/mailing/templates/mailing/mailing_attempts_list.html
@@ -7,6 +7,7 @@
 <ul class="list-group list-group-flush">
     {% for attempt in mailing_attempts %}
     <li class="list-group-item">
+        <h3>Topic: <a href="{% url 'mailing:message-detail' message.pk %}" class="link">{{ message.title }}</a></h3>
         <h4>Дата и время: <span class="badge text-bg-secondary">{{ attempt.attempt_at }}</span></h4>
         {% if attempt.status == 'Success' %}
         <h6>Статус: <span class="badge text-bg-success">{{ attempt.status }}</span></h6>
