added profile update option and refactored queryset for listviews

--- a/mailing/templates/mailing/home.html
+++ b/mailing/templates/mailing/home.html
@@ -8,11 +8,12 @@
 
 <div class="container text-center">
     <ul class="list-group">
-           <li class="list-group-item"><h3>Количество рассылок:</h3> <h4 class="text-info bg-dark">{{ all_mailings }}</h4></li>
+        <li class="list-group-item"><h3>Количество рассылок:</h3> <h4 class="text-info bg-dark">{{ all_mailings }}</h4>
+        </li>
 
-            <li class="list-group-item"><h3>Активных рассылок:</h3> <h4 class="text-info bg-dark">{{ launched_mailings }}</h4></li>
+        <li class="list-group-item"><h3>Активных рассылок:</h3> <h4 class="text-info bg-dark">{{ launched_mailings }}</h4></li>
 
-            <li class="list-group-item"><h3>Количество уникальных получателей:</h3> <h4 class="text-info bg-dark">{{ unique_receivers }}</h4></li>
+        <li class="list-group-item"><h3>Количество уникальных получателей:</h3> <h4 class="text-info bg-dark">{{ unique_receivers }}</h4></li>
 
     </ul>
 </div>
