--- a/mailing/templates/mailing/mail_receiver/mail_receivers_list.html
+++ b/mailing/templates/mailing/mail_receiver/mail_receivers_list.html
@@ -5,6 +5,9 @@
 {% block content %}
 
 <div class="row row-cols-1 row-cols-md-2 g-4">
+    {% if mail_receivers|length == 0 %}
+    <h4>No mail receivers created</h4>
+    {% endif %}
     {% for mail_receiver in mail_receivers %}
     {% if mail_receiver.owner == user or perms.mailing_unit.view_mailreceiver%}
     <div class="col">
@@ -14,6 +17,11 @@
       <p class="card-text"><span class="badge text-bg-info">Email: </span> {{ mail_receiver.email }}</p>
       <p class="card-text"><span class="badge text-bg-secondary">Комментарий:</span> <small class="text-body-secondary">{{ mail_receiver.comment|truncatechars:100 }}</small></p>
         <a href="{% url 'mailing:mail-receiver-detail' mail_receiver.pk %}" class="btn btn-primary">Посмотреть</a>
+        {% if perms.view_mailreceiver %}
+        <div class="card-footer">
+            Created by: <a href="{% url 'users:user-profile' mail_receiver.owner.pk %}">{{mail_receiver.owner}}</a>
+            </div>
+        {% endif %}
     </div>
       </div>
         </div>
