--- a/users/templates/logout.html
+++ b/users/templates/logout.html
@@ -5,6 +5,8 @@
 {% block content %}
 <h2> Вы вышли из системы </h2>
 <p>Если хотите войти снова, нажмите на кнопку снизу</p>
-<a href="{% url 'users:login' %}"><button class="btn btn-primary">Войти</button></a>
+<a href="{% url 'users:login' %}">
+    <button class="btn btn-primary">Войти</button>
+</a>
 {% endblock %}
 
