--- a/mailing/templates/mailing/includes/header.html
+++ b/mailing/templates/mailing/includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'mailing:home' %}">Меню</a>
+        <a class="navbar-brand text-primary" href="{% url 'mailing:home' %}">Mailing Service</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,6 +20,8 @@
                         <li><a class="dropdown-item" href="{% url 'mailing:mail-receivers-list' %}">Получатели</a></li>
                         <li><a class="dropdown-item" href="{% url 'mailing:mailing-units-list' %}">Рассылки</a></li>
                         <li><a class="dropdown-item" href="{% url 'mailing:messages-list' %}">Сообщения</a></li>
+                        <li><a class="dropdown-item" href="{% url 'mailing:all-mailing-attempts-list' %}">История
+                            рассылок</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -34,12 +36,13 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'mailing:all-mailing-attempts-list' %}">История
-                        рассылок</a>
+                    <a class="nav-link active" aria-current="page"
+                       href="{% url 'users:user-profile' user.pk %}">Profile</a>
                 </li>
                 <li class="nav-item">
                     {% if perms.view_user %}
-                    <a class="nav-link active text-light bg-dark" aria-current="page" href="{% url 'users:all-users' %}">See all users</a>
+                    <a class="nav-link active text-light bg-dark" aria-current="page"
+                       href="{% url 'users:all-users' %}">See all users</a>
                     {% endif %}
                 </li>
                 {% endif %}
