--- a/mailing/templates/mailing/mailing_unit/mailing_units_list.html
+++ b/mailing/templates/mailing/mailing_unit/mailing_units_list.html
@@ -3,11 +3,14 @@
 {% block title %} Все сообщения {% endblock %}
 
 {% block content %}
+{% if mailing_units|length == 0 %}
+<h4>No mailings created</h4>
+{% endif %}
 <ul class="list-group list-group-flush">
-{% for mailing_unit in mailing_units %}
+    {% for mailing_unit in mailing_units %}
     {% if mailing_unit.owner == user or perms.mailing_unit.view_mailingunit%}
     <li class="list-group-item">
-    <h4>Тема: <span class="badge text-bg-secondary">{{ mailing_unit.message }}</span></h4>
+        <h4>Тема: <span class="badge text-bg-secondary">{{ mailing_unit.message }}</span></h4>
         {% if mailing_unit.status == 'Launched' %}
         <h6>Статус: <span class="badge text-bg-success">{{ mailing_unit.status }}</span></h6>
         {% elif mailing_unit.status == 'Created' %}
@@ -15,11 +18,14 @@
         {% else %}
         <h6>Статус: <span class="badge text-bg-danger">{{ mailing_unit.status }}</span></h6>
         {% endif %}
-    <a href="{% url 'mailing:mailing-unit-detail' mailing_unit.pk %}">
-        <button type="button" class="btn btn-lg btn-block btn-outline-info">Посмотреть</button>
-    </a>
+        {% if perms.view_mailingunit %}
+        <h6>Created by: <a href="{% url 'users:user-profile' mailing_unit.owner.pk %}">{{mailing_unit.owner}}</a></h6>
+        {% endif %}
+        <a href="{% url 'mailing:mailing-unit-detail' mailing_unit.pk %}">
+            <button type="button" class="btn btn-lg btn-block btn-outline-info">Посмотреть</button>
+        </a>
     </li>
     {% endif %}
-{% endfor %}
+    {% endfor %}
 </ul>
 {% endblock %}
