--- a/mailing/templates/mailing/message/message_detail.html
+++ b/mailing/templates/mailing/message/message_detail.html
@@ -9,7 +9,8 @@
         <h5>Тема: {{ message.title }}</h5>
     </div>
     <div class="card-body">
-        <h5 class="card-title">Текст: </h5> <p class="text-secondary">{{ message.body }}</p>
+        <h5 class="card-title">Текст: </h5>
+        <p class="text-secondary">{{ message.body }}</p>
         <div class="card-footer">
             <a href="{% url 'mailing:message-update' message.pk %}">
                 <button type="button" class="btn btn-lg btn-block btn-outline-secondary">Редактировать</button>
