--- a/mailing/templates/mailing/includes/header.html
+++ b/mailing/templates/mailing/includes/header.html
@@ -40,7 +40,7 @@
                        href="{% url 'users:user-profile' user.pk %}">Profile</a>
                 </li>
                 <li class="nav-item">
-                    {% if perms.view_user %}
+                    {% if perms.users.view_customuser %}
                     <a class="nav-link active text-light bg-dark" aria-current="page"
                        href="{% url 'users:all-users' %}">See all users</a>
                     {% endif %}
